@@ -7,6 +7,7 @@ xmp - Extended Module Player
 \fBxmp\fP
 [\fB\-a, \-\-amplify\fP \fIfactor\fP]
 [\fB\-b, \-\-bits\fP \fIbits\fP]
+[\fB\-C, \-\-show\-comments\fP]
 [\fB\-c, \-\-stdout\fP]
 [\fB\-D\fP \fIdevice-specific parameters\fP]
 [\fB\-d, \-\-driver\fP \fIdriver\fP]
@@ -55,6 +56,8 @@ factors may cause distorted or noisy output\&.
 .IP "\fB\-b, \-\-bits\fP \fIbits\fP" 
 Set the software mixer resolution (8 or 16 bits)\&. If ommited,
 The audio device will be opened at the highest resolution available\&.
+.IP "\fB\-C, \-\-show\-comments\fP" 
+Display module comment text, if any\&.
 .IP "\fB\-c, \-\-stdout\fP" 
 Mix the module to stdout\&.
 .IP "\fB\-D\fP \fIdevice-specific parameter\fP" 
